--- a/public/privacy.html
+++ b/public/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Shadow Browser</title>
+    <title>Privacy Policy - Infinity Browser</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -86,7 +86,7 @@
                 Shadow Browser does not knowingly allow individuals under the age of 13 to use our services.
             </p>
             <ul>
-                <li><strong>Prohibited Use:</strong> If you are under 13, please do not use Shadow Browser.</li>
+                <li><strong>Prohibited Use:</strong> If you are under 13, please do not use Infinity Browser.</li>
                 <li><strong>Actions Taken:</strong> If we are alerted that a user under 13 has used our service, we will take immediate steps to remove any information related to that user from our systems.</li>
             </ul>
         </div>
