--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shadow</title>
+  <title>Infinity</title>
 
   <!-- Meta Tags-->
   <meta name="title" content="ShadowV3" />
@@ -48,7 +48,7 @@
       <div class="loading-cell"></div>
       <div class="loading-cell"></div>
     </div>
-    <p class="loading-text">Loading Shadow</p>
+    <p class="loading-text">Booting Up Infinity</p>
   </div>
 
 
@@ -170,7 +170,7 @@
     <table>
       <tr>
         <td>
-          <button data-add-tab onclick='tabs.createTab("shadow://ai")'>     
+          <button data-add-tab onclick='tabs.createTab("Infinity://ai")'>     
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960" class="menu-icons">
               <path d="M400-240q-33 0-56.5-23.5T320-320v-50q-57-39-88.5-100T200-600q0-117 81.5-198.5T480-880q117 0 198.5 81.5T760-600q0 69-31.5 129.5T640-370v50q0 33-23.5 56.5T560-240H400Zm0-80h160v-92l34-24q41-28 63.5-71.5T680-600q0-83-58.5-141.5T480-800q-83 0-141.5 58.5T280-600q0 49 22.5 92.5T366-436l34 24v92Zm0 240q-17 0-28.5-11.5T360-120v-40h240v40q0 17-11.5 28.5T560-80H400Zm80-520Z"/>
             </svg> AI
@@ -181,7 +181,7 @@
     <table>
       <tr>
         <td>
-          <button data-add-tab onclick='alert("Coming in Shadow 3.1.1")'>     
+          <button data-add-tab onclick='alert("Coming Soon Loser")'>     
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960" class="menu-icons">
               <path d="M240-400h320v-80H240v80Zm0-120h480v-80H240v80Zm0-120h480v-80H240v80ZM80-80v-720q0-33 23.5-56.5T160-880h640q33 0 56.5 23.5T880-800v480q0 33-23.5 56.5T800-240H240L80-80Zm126-240h594v-480H160v525l46-45Zm-46 0v-480 480Z"/>
             </svg> Chat
@@ -306,19 +306,6 @@
   <!--DEV STUFF-->
   <!-- <button class="powered-by-container" style="right:0; top:0;" onclick="reset()">Reset</button> -->
   <!--DEV STUFF-->
-  <a id="billigerhost" class="powered-by-container" style="left: 0; bottom: 0" target="_blank">
-    <img src="/icons/billigerhost.ico" alt="billigerhost Logo" />
-    <span class="powered-by-text"><span style="color: #ad271f">Billiger</span>Host</span>
-  </a>
-
-  <a id="discord" class="discord" target="_blank">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" height="20" width="20" class="icons">
-      <path
-        d="M524.531,69.836a1.5,1.5,0,0,0-.764-.7A485.065,485.065,0,0,0,404.081,32.03a1.816,1.816,0,0,0-1.923.91,337.461,337.461,0,0,0-14.9,30.6,447.848,447.848,0,0,0-134.426,0,309.541,309.541,0,0,0-15.135-30.6,1.89,1.89,0,0,0-1.924-.91A483.689,483.689,0,0,0,116.085,69.137a1.712,1.712,0,0,0-.788.676C39.068,183.651,18.186,294.69,28.43,404.354a2.016,2.016,0,0,0,.765,1.375A487.666,487.666,0,0,0,176.02,479.918a1.9,1.9,0,0,0,2.063-.676A348.2,348.2,0,0,0,208.12,430.4a1.86,1.86,0,0,0-1.019-2.588,321.173,321.173,0,0,1-45.868-21.853,1.885,1.885,0,0,1-.185-3.126c3.082-2.309,6.166-4.711,9.109-7.137a1.819,1.819,0,0,1,1.9-.256c96.229,43.917,200.41,43.917,295.5,0a1.812,1.812,0,0,1,1.924.233c2.944,2.426,6.027,4.851,9.132,7.16a1.884,1.884,0,0,1-.162,3.126,301.407,301.407,0,0,1-45.89,21.83,1.875,1.875,0,0,0-1,2.611,391.055,391.055,0,0,0,30.014,48.815,1.864,1.864,0,0,0,2.063.7A486.048,486.048,0,0,0,610.7,405.729a1.882,1.882,0,0,0,.765-1.352C623.729,277.594,590.933,167.465,524.531,69.836ZM222.491,337.58c-28.972,0-52.844-26.587-52.844-59.239S193.056,219.1,222.491,219.1c29.665,0,53.306,26.82,52.843,59.239C275.334,310.993,251.924,337.58,222.491,337.58Zm195.38,0c-28.971,0-52.843-26.587-52.843-59.239S388.437,219.1,417.871,219.1c29.667,0,53.307,26.82,52.844,59.239C470.715,310.993,447.538,337.58,417.871,337.58Z" />
-    </svg>
-  </a>
-
-
 
   <!-- Scripts -->
   <script type="text/javascript">
@@ -433,7 +420,7 @@
       //Some features are unsupported (For example omnibox auto update omnibox)
       if (
         confirm(
-          "You are using an unsupported browser. \nSome features may not work, would you like to enable the experimental support features?",
+          "You are using an unsupported browser. \n(Some features may not work), would you like to enable the experimental support features?",
         )
       ) {
         showExpirmentalFeatures();
