--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
   <title>Infinity</title>
 
   <!-- Meta Tags-->
-  <meta name="title" content="ShadowV3" />
+  <meta name="title" content="Infinity" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Tabbed, Multi-Featured, and Advanced. Quiet, Fast, Hidden." />
+  <meta name="description" content="The best proxy of 2025!" />
   <meta name="theme-color" content="#141433">
   <script src="/assets/autoblank.js" type="module"></script>
 
