--- a/public/ai.html
+++ b/public/ai.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShadowAssistant</title>
+    <title>Infinite Bot</title>
     <link rel="stylesheet" href="/css/themes.css" />
     <script src="/assets/themes.js" type="module"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -14,13 +14,13 @@
 
 <body>
     <div class="header">
-        <h1>ShadowAssistant</h1>
-        <p>powered and sponsored by <a href="https://shuttleai.com" target="_blank">ShuttleAI</a></p>
+        <h1>Infinite Bot</h1>
+        <p>powered by <a href="https://shuttleai.com" target="_blank">ShuttleAI</a></p>
     </div>
     <div class="messages">
     </div>
     <div class="input-container">
-        <textarea placeholder="Message ShadowAi"></textarea>
+        <textarea placeholder="Message InfiniteAI"></textarea>
         <button class="send-btn">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                 <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
